# Qogir-theme

./: INSTALL.md  meson.build  meson_options.txt
src/: meson.build
